# AI-Emergency-Response-Coordination-System---Agent

./: .gitignore  Dockerfile  README.md  env.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
plans/: disaster_response_env.md
server/: app.py
